fixing link color contrast ration

--- a/parafia/style.css
+++ b/parafia/style.css
@@ -7,7 +7,7 @@ nav a:hover, nav a.active {
 }
 
 a, .page-link {
-	color: #009bff;
+	color: #0093f3;
 }
 
 a:hover {
